Added 2 basic form snippets: form-group and form-control

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
             {
                 "language": "html",
                 "path": "./snippets/navsnippets.json"
+            },
+            {
+                "language": "html",
+                "path": "./snippets/formsnippets.json"
             }
         ]
     }
