--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bootstrap-4-cdn-snippet",
 	"displayName": "Bootstrap 4 CDN Snippet",
 	"description": "This will get you up and running to get a boilerplate of bootstrap ready in a sec",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"publisher": "eventyret",
 	"test": "node ./node_modules/vscode/bin/test",
 	"repository": {
@@ -12,7 +12,9 @@
 	"engines": {
 		"vscode": "^1.20.0"
 	},
-	"categories": ["Snippets"],
+	"categories": [
+		"Snippets"
+	],
 	"contributes": {
 		"snippets": [
 			{
@@ -28,5 +30,8 @@
 				"path": "./snippets/formsnippets.json"
 			}
 		]
+	},
+	"dependencies": {
+		"npm": "^5.7.1"
 	}
 }
