--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
 	"name": "bootstrap-4-cdn-snippet",
 	"displayName": "Bootstrap 4 CDN Snippet",
 	"description": "This will get you up and running to get a boilerplate of bootstrap ready in a sec",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"publisher": "eventyret",
-	"test": "node ./node_modules/vscode/bin/test",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Eventyret/vscode-bcdn"
@@ -12,9 +11,8 @@
 	"engines": {
 		"vscode": "^1.20.0"
 	},
-	"categories": [
-		"Snippets"
-	],
+	"categories": ["Snippets"],
+	"icon": "icon.png",
 	"contributes": {
 		"snippets": [
 			{
