--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"engines": {
 		"vscode": "^1.20.0"
 	},
-	"categories": ["Snippets"],
+	"categories": [
+		"Snippets"
+	],
 	"icon": "icon.png",
 	"contributes": {
 		"snippets": [
