--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bootstrap-4-cdn-snippet",
 	"displayName": "Bootstrap 4 CDN Snippet",
 	"description": "This will get you up and running to get a boilerplate of bootstrap ready in a sec",
-	"version": "1.0.8",
+	"version": "1.1.0",
 	"publisher": "eventyret",
 	"repository": {
 		"type": "git",
@@ -28,6 +28,54 @@
 			{
 				"language": "html",
 				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "javascriptreact",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "javascriptreact",
+				"path": "./snippets/navsnippets.json"
+			},
+			{
+				"language": "javascriptreact",
+				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "javascript",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "javascript",
+				"path": "./snippets/navsnippets.json"
+			},
+			{
+				"language": "javascript",
+				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/navsnippets.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "vue-html",
+				"path": "./snippets.json"
+			},
+			{
+				"language": "vue-html",
+				"path": "./navsnippets.json"
+			},
+			{
+				"language": "vue-html",
+				"path": "./formsnippets.json"
 			}
 		]
 	},
