--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,8 @@
-.vscode/**
-.vscode-test/**
 .gitignore
 vsc-extension-quickstart.md
+.vscode
+node_modules
+out/
+src/
+tsconfig.json
+webpack.config.js
