--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bootstrap-4-cdn-snippet",
 	"displayName": "Bootstrap 4 CDN Snippet",
 	"description": "This will get you up and running to get a boilerplate of bootstrap ready in a sec",
-	"version": "1.2.3",
+	"version": "1.3.0",
 	"publisher": "eventyret",
 	"homepage": "https://github.com/Eventyret/vscode-bcdn/blob/master/README.md",
 	"license": "SEE LICENSE IN LICENSE.md",
@@ -36,6 +36,10 @@
 				"path": "./snippets/formsnippets.json"
 			},
 			{
+				"language": "html",
+				"path": "./snippets/bootswatch.json"
+			},
+			{
 				"language": "javascriptreact",
 				"path": "./snippets/snippets.json"
 			},
@@ -46,6 +50,10 @@
 			{
 				"language": "javascriptreact",
 				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "javascriptreact",
+				"path": "./snippets/bootswatch.json"
 			},
 			{
 				"language": "javascript",
@@ -59,6 +67,10 @@
 				"language": "javascript",
 				"path": "./snippets/formsnippets.json"
 			}
+			{
+				"language": "javascript",
+				"path": "./snippets/bootswatch.json"
+			},
 		]
 	},
 	"dependencies": {
