--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -1,58 +1,29 @@
-# CI and PR build script
-
 trigger:
-	- master
-  
-  pool:
-	vmImage: ubuntu-16.04
-  
-  steps:
-	# for convenience, we tag CI-produced packages with a version number
-	# pointing to the commit which was built. for PRs, also include the PR #.
-	- bash: |
-		PACKAGE_VERSION=$(node -p "require('./package.json').version")
-  
-		if [ -n "$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER" ]; then
-		  VERSION_STRING=${PACKAGE_VERSION}-pr-${SYSTEM_PULLREQUEST_PULLREQUESTNUMBER}-$(git rev-parse --short HEAD)
-		else
-		  VERSION_STRING=${PACKAGE_VERSION}-ci-$(git rev-parse --short HEAD)
-		fi
-  
-		npm --no-git-tag-version version $VERSION_STRING
-		echo "##vso[build.updatebuildnumber]${VERSION_STRING}_${BUILD_BUILDID}"
-		echo "$PACKAGE_VERSION" > version.txt
-	  displayName: Set version number of package and build
-  
-	- script: npm install
-	  displayName: npm install
-  
-	# Acquire the `vsce` tool and use it to package
-	- script: |
-		sudo npm install -g vsce
-		vsce package
-	  displayName: Create VSIX
-  
-	# For releasable builds, we'll want the branch
-	# Expects that a 'version.txt' has been laid down by a previous step
-	- bash: |
-		echo $(Build.SourceBranch) | sed "s|refs/[^/]*/||" > branch.txt
-		PACKAGE_VERSION=$(cat version.txt)
-		VERSION_REGEX="## $(echo $PACKAGE_VERSION | sed 's/\./\\./g')"
-	  displayName: Get branch
-  
-	# Choose files to publish
-	- task: CopyFiles@2
-	  displayName: Stage VSIX for publishing
-	  inputs:
-		contents: |-
-		  *.vsix
-		  version.txt
-		  branch.txt
-		targetFolder: $(Build.ArtifactStagingDirectory)
-  
-	# Publish files as an artifact
-	- task: PublishPipelineArtifact@1
-	  displayName: Publish VSIX
-	  inputs:
-		artifact: bootstrap-4-cdn-snippet
-		targetPath: $(Build.ArtifactStagingDirectory)
+    - master
+pool:
+    vmImage: ubuntu-16.04
+steps:
+    -
+        bash: "PACKAGE_VERSION=$(node -p \"require('./package.json').version\")\n\nif [ -n \"$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER\" ]; then\n  VERSION_STRING=${PACKAGE_VERSION}-pr-${SYSTEM_PULLREQUEST_PULLREQUESTNUMBER}-$(git rev-parse --short HEAD)\nelse\n  VERSION_STRING=${PACKAGE_VERSION}-ci-$(git rev-parse --short HEAD)\nfi\n\nnpm --no-git-tag-version version $VERSION_STRING\necho \"##vso[build.updatebuildnumber]${VERSION_STRING}_${BUILD_BUILDID}\"\necho \"$PACKAGE_VERSION\" > version.txt\n"
+        displayName: 'Set version number of package and build'
+    -
+        displayName: 'npm install'
+        script: 'npm install'
+    -
+        displayName: 'Create VSIX'
+        script: "sudo npm install -g vsce\nvsce package\n"
+    -
+        bash: "echo $(Build.SourceBranch) | sed \"s|refs/[^/]*/||\" > branch.txt\nPACKAGE_VERSION=$(cat version.txt)\nVERSION_REGEX=\"## $(echo $PACKAGE_VERSION | sed 's/\\./\\\\./g')\"\n"
+        displayName: 'Get branch'
+    -
+        displayName: 'Stage VSIX for publishing'
+        inputs:
+            contents: "*.vsix\nversion.txt\nbranch.txt"
+            targetFolder: $(Build.ArtifactStagingDirectory)
+        task: CopyFiles@2
+    -
+        displayName: 'Publish VSIX'
+        inputs:
+            artifact: bootstrap-4-cdn-snippet
+            targetPath: $(Build.ArtifactStagingDirectory)
+        task: PublishPipelineArtifact@1
