--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bootstrap-4-cdn-snippet",
 	"displayName": "Bootstrap 4 CDN Snippet",
 	"description": "This will get you up and running to get a boilerplate of bootstrap ready in a sec",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"publisher": "eventyret",
 	"homepage": "https://github.com/Eventyret/vscode-bcdn/blob/master/README.md",
 	"license": "SEE LICENSE IN LICENSE.md",
@@ -37,6 +37,38 @@
 			},
 			{
 				"language": "html",
+				"path": "./snippets/bootswatch.json"
+			},
+			{
+				"language": "jinja-html",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "jinja-html",
+				"path": "./snippets/navsnippets.json"
+			},
+			{
+				"language": "jinja-html",
+				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "jinja-html",
+				"path": "./snippets/bootswatch.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/snippets.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/navsnippets.json"
+			},
+			{
+				"language": "django-html",
+				"path": "./snippets/formsnippets.json"
+			},
+			{
+				"language": "django-html",
 				"path": "./snippets/bootswatch.json"
 			},
 			{
